tests/rt/neg/ifc/pini_full_insuff_auth.trp
let val a_ = attenuate (authority, `{alice}`)
    val c = pinipushto (a_ , `{alice}`) 
    val _ = if (true raisedTo `{alice, bob}`) then () else ()   
    val _ = debugpc ()
    val _ = pinipop (c)
in debugpc ()
end